--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,24 @@
 spring:
   application:
     name: app
+  jpa:
+    hibernate:
+      ddl-auto: none
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+  datasource:
+    url: jdbc:postgresql://localhost:5433/meatway
+    username: postgres
+    password: 1
 
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+logging:
+  level:
+    org.flywaydb: DEBUG
 
 springdoc:
   api-docs:
