--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,5 @@ javaVersion=23
 micrometerVersion=1.14.4
 flywayVersion=11.4.0
 swaggerVersion=2.8.5
+mapstructVersion=1.6.3
+lombokMapstructBindingVersion=0.2.0
