--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ spring:
     name: app
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     show-sql: true
     properties:
       hibernate:
@@ -13,9 +13,9 @@ spring:
     username: postgres
     password: 1
 
-  flyway:
-    enabled: true
-    locations: classpath:db/migration
+#  flyway:
+#    enabled: true
+#    locations: classpath:db/migration
 logging:
   level:
     org.flywaydb: DEBUG
