skip: add security and docker containers

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,5 @@ flywayVersion=11.4.0
 swaggerVersion=2.8.5
 mapstructVersion=1.6.3
 lombokMapstructBindingVersion=0.2.0
+minioVersion=8.5.17
+jibVersion=2.7.1
