--- a/build.gradle
+++ b/build.gradle
@@ -32,16 +32,21 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    // implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-    // implementation 'org.springframework.boot:spring-boot-starter-security'
+//    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation "io.micrometer:micrometer-registry-prometheus:${micrometerVersion}"
+    implementation("org.springframework.security:spring-security-rsa:1.1.5")
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation "org.flywaydb:flyway-core:${flywayVersion}"
     runtimeOnly 'org.postgresql:postgresql'
+    runtimeOnly "com.h2database:h2"
     runtimeOnly "org.flywaydb:flyway-database-postgresql:${flywayVersion}"
 
 
+    // Minio
+    implementation("io.minio:minio:${minioVersion}")
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-testcontainers'
