--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,42 @@
 version: '3.8'
 services:
   db:
-    image: postgres:15-alpine
-    container_name: meatway_db
+    image: postgres:17
+    container_name: meatway-db
+    restart: unless-stopped
+    env_file: .env
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=1
-      - POSTGRES_DB=meatway
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "5433:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}" ]
+      interval: 3s
+      timeout: 5s
     volumes:
-      - db_data:/var/lib/postgresql/data
+      - /var/lib/postgresql/data
+    networks:
+      - internal
 
-volumes:
-  db_data:
+  meatway-api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: meatway-api
+    depends_on:
+      - db
+    environment:
+      DB_URL: ${DB_URL}
+      DB_USERNAME: ${POSTGRES_USER}
+      DB_PASSWORD: ${POSTGRES_PASSWORD}
+    ports:
+      - "8080:8080"
+    networks:
+      - internal
+
+networks:
+  internal:
+    name: internal
+    driver: bridge
