--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,21 +1,7 @@
 spring:
   application:
     name: app
-  jpa:
-    hibernate:
-      ddl-auto: create
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-  datasource:
-    url: jdbc:postgresql://localhost:5433/meatway
-    username: postgres
-    password: 1
 
-#  flyway:
-#    enabled: true
-#    locations: classpath:db/migration
 logging:
   level:
     org.flywaydb: DEBUG
@@ -27,3 +13,7 @@ springdoc:
   swagger-ui:
     path: /swagger-ui.html
     enabled: true
+
+rsa:
+  private-key: classpath:certs/private.pem
+  public-key: classpath:certs/public.pem
