--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DB=meatway-db
+POSTGRES_DB=meatway_db_container
 POSTGRES_PORT=5432
-DB_URL=jdbc:postgresql://meatway-db:5432/business
+DB_URL=jdbc:postgresql://meatway-db:5432/meatway_db_container
