--- a/build.gradle
+++ b/build.gradle
@@ -39,14 +39,10 @@ dependencies {
     implementation("org.springframework.security:spring-security-rsa:1.1.5")
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation "org.flywaydb:flyway-core:${flywayVersion}"
+    implementation 'org.liquibase:liquibase-core'
     runtimeOnly 'org.postgresql:postgresql'
     runtimeOnly "com.h2database:h2"
-    runtimeOnly "org.flywaydb:flyway-database-postgresql:${flywayVersion}"
-
-
-    // Minio
-    implementation("io.minio:minio:${minioVersion}")
+    implementation("jakarta.validation:jakarta.validation-api:${jakartaVersion}")
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-testcontainers'
