skip: fix don't exist users table

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=meatway_db_container
 POSTGRES_PORT=5432
-DB_URL=jdbc:postgresql://meatway-db:5432/meatway_db_container
+DB_URL=jdbc:postgresql://meatway-db:5432/meatway_db_container?currentSchema=business
