--- a/src/main/resources/application-debug.yaml
+++ b/src/main/resources/application-debug.yaml
@@ -5,6 +5,6 @@ spring:
       hibernate:
         format_sql: true
   datasource:
-    url: jdbc:postgresql://localhost:5433/meatway_db_container
+    url: jdbc:postgresql://localhost:5433/meatway_db_container?currentSchema=business
     username: postgres
     password: postgres
