--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,8 @@ dependencies {
 //    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
     implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation "io.micrometer:micrometer-registry-prometheus:${micrometerVersion}"
+    implementation("org.springframework.boot:spring-boot-starter-actuator")
+    implementation("io.micrometer:micrometer-registry-prometheus")
     implementation("org.springframework.security:spring-security-rsa:1.1.5")
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
